--- a/401CCU-Demo.ioc
+++ b/401CCU-Demo.ioc
@@ -11,8 +11,13 @@ Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_TX.0.Priority=DMA_PRIORITY_HIGH
 Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK,configENABLE_FPU,configUSE_RECURSIVE_MUTEXES,configUSE_COUNTING_SEMAPHORES,Mutexes01
+FREERTOS.Mutexes01=myMutex01,Dynamic,NULL
+FREERTOS.Tasks01=MainTask,0,128,StartMainTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
+FREERTOS.configUSE_COUNTING_SEMAPHORES=1
+FREERTOS.configUSE_RECURSIVE_MUTEXES=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
